# anki-wiktionary

./: .gitignore  README.md  exceptions.txt  main.py  pyproject.toml
